[gd_scene load_steps=10 format=3 uid="uid://b4udisycublkt"]

[ext_resource type="Texture2D" uid="uid://3rf275w8q5tq" path="res://images/screens/form_m.jpg" id="1_q86ch"]
[ext_resource type="Script" path="res://scripts/scenes/MessageWindowGUI.gd" id="2_5ti5s"]
[ext_resource type="Texture2D" uid="uid://cu7shfco5s5l1" path="res://images/screens/icon_m.png" id="3_0p0sl"]
[ext_resource type="Texture2D" uid="uid://bwkj88vqd58iu" path="res://images/screens/button_ok.png" id="4_mb26j"]
[ext_resource type="PackedScene" uid="uid://cc1yjbeih51ex" path="res://scenes/CardInDraw.tscn" id="4_ua8ap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uyumv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgy1o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43dr4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6euyw"]

[node name="MessageWindowGUI" type="TextureRect"]
texture = ExtResource("1_q86ch")
script = ExtResource("2_5ti5s")

[node name="TitleLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 31.0
offset_right = 386.0
offset_bottom = 80.0
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[center][b]Title"

[node name="MessageLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 133.0
offset_right = 488.0
offset_bottom = 295.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
text = "[b]Line 1
Line 2
Line 3
Line 4
Line 5
Line 6
Line 7"

[node name="ImageContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 9.0
offset_right = 477.0
offset_bottom = 49.0

[node name="DefaultImage" type="Sprite2D" parent="ImageContainer"]
position = Vector2(47, 46)
texture = ExtResource("3_0p0sl")

[node name="CardInDraw" parent="ImageContainer" instance=ExtResource("4_ua8ap")]
position = Vector2(47, 46)
scale = Vector2(1.35, 1.35)

[node name="OKButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.5
offset_top = -86.0
offset_right = 71.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_uyumv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xgy1o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_43dr4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6euyw")
icon = ExtResource("4_mb26j")
flat = true

[connection signal="card_button_pressed" from="ImageContainer/CardInDraw" to="." method="_on_card_in_draw_card_button_pressed"]
[connection signal="card_flipped" from="ImageContainer/CardInDraw" to="." method="_on_card_in_draw_card_flipped"]
[connection signal="pressed" from="OKButton" to="." method="_on_ok_button_pressed"]
